--- a/.github/workflows/altostra-ci.yaml
+++ b/.github/workflows/altostra-ci.yaml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Set node version
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v2
         with:
           node-version: '16.x'
       - name: Install Altostra CLI
