--- a/.github/workflows/altostra-ci.yaml
+++ b/.github/workflows/altostra-ci.yaml
@@ -10,9 +10,17 @@ jobs:
     name: Alto Push
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x]
+
     steps:
-      - name: Set node version
-        uses: node16
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: Install Altostra CLI
         run: |
              npm install -g @altostra/cli
