--- a/.github/workflows/altostra-ci.yaml
+++ b/.github/workflows/altostra-ci.yaml
@@ -25,9 +25,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run : npm init -w packages/a   
     - run : npm install -g @altostra/cli
              alto --version
              alto api-key set ${{ secrets.ALTO_API_KEY }}
-    - run: npm ci
     - run: alto push v$(node -p -e "require('./package.json').version") --json
 
