--- a/.github/workflows/altostra-ci.yaml
+++ b/.github/workflows/altostra-ci.yaml
@@ -25,8 +25,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run : npm install -g @altostra/cli
-             alto --version
-             alto api-key set ${{ secrets.ALTO_API_KEY }}
-    - run: alto push 
+    - run : npm install @altostra/cli
+    - run : alto --version
+    - run : alto api-key set ${{ secrets.ALTO_API_KEY }}
+    - run:  alto push 
 
