--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "@altostra/cli": "5.8.24"
+    "altostra/cli": "5.8.24"
   }
 }
