--- a/.github/workflows/altostra-ci.yaml
+++ b/.github/workflows/altostra-ci.yaml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run : npm install @altostra/cli
+    - run : npm install altostra/cli@5.8.24
     - run : alto --version
     - run : alto api-key set ${{ secrets.ALTO_API_KEY }}
     - run:  alto push 
